# vibe_web_terminal

./: .gitignore  INSTRUCTIONS.md  README.md  auth.yaml.example  cleanup-sessions.sh  edit_user.py  linux_chinese_authors_analysis.md  proxy_requirements.txt  reverse_proxy.py  run.sh  setup.sh  stop.sh
devstral-vibe/: Modelfile
doc/: OFFLINE_SETUP_GUIDE.md  cli_agent_replacement_research.md  ollama_kv_cache_bug_investigation.md
docker/: Dockerfile
docker/config/: AGENTS.md  entrypoint.sh  start-session.sh  system-prompt-suffix.md  tmux.conf  vibe-config.toml  vibe-env  vibe-secrets.env.example  vibe-trusted-folders.toml
docker/config/agents/: explore.toml
docker/config/opencode/: opencode-agents.md  opencode.json  opencode.json.ollama-backup
docker/config/prompts/: subagent.md
docker/config/qwen/: QWEN.md  settings.json
docker/config/vibe/: system-prompt-suffix.md  vibe-config.toml  vibe-secrets.env.example
docker/config/vibe/agents/: explore.toml
docker/config/vibe/prompts/: subagent.md
docs/: DOCKER_SWARM_SCALING_PLAN.md
future/: PLAN_websocket_http_fallback.md  agent_pipeline_concept.md  pipeline_find_inconsistencies.md
ollama-models/: qwen3.5-custom.Modelfile
qwen3.5-custom/: Modelfile
rust_proxy/: Cargo.toml
rust_proxy/src/: main.rs
server/: app.py  auth.py  requirements.txt
server/static/: sessions.js
server/static/xterm/: README.md
server/templates/: index.html  login.html  terminal.html
