[package]
name = "rust_proxy"
version = "0.1.0"
edition = "2021"
description = "High-performance reverse proxy for Vibe Web Terminal"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full", "process"] }

# Web framework & HTTP
axum = { version = "0.8", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

# HTTP client for proxying
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
x509-parser = "0.17"
time = "0.3"
hostname = "0.4"

# Middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "limit"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"
bytes = "1"
http = "1"
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
